# competency-project

./: .env_EXEMPLE  .gitignore  README.md  ci.yml  main.py  pyproject.toml  requirements.txt
api/: constants.py  data_functions.py  server_functions.py  utils.py
api/mock_data/: user_score.py
app/: app.py  constants.py  data_functions.py  routes.py  server_functions.py  test.py  utils.py
app/mock_data/: user_score.py
app/templates/: download.html
competency_matrix/: app.py  app2.py  functions.py  routes.py  utils.py
competency_matrix/mock_data/: user_score.py
competency_matrix/templates/: download.html
mock_data/: user_score.py
tests/: functions_test.py  test_functions.py
