[tool.poetry]
name = "competency-matrix"
version = "0.1.0"
description = ""
authors = ["Isciane Nicolle <isciane.nicolle@wishow.io>"]
readme = "README.md"
packages = [{include = "competency_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
pandas = "^2.0.0"
autopep8 = "^2.0.2"
json2html = "^1.3.0"
plotly-express = "^0.4.1"
plotly = "^5.14.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
